Fix missing border direction classes

--- a/app/assets/stylesheets/asmcss/_utility.css.scss
+++ b/app/assets/stylesheets/asmcss/_utility.css.scss
@@ -108,11 +108,11 @@ $space-4: 48px;
 
 // Borders
 
-.border        { border: 1px solid $gray-lighter }
-.border-top    { border: 1px solid $gray-lighter }
-.border-right  { border: 1px solid $gray-lighter }
-.border-bottom { border: 1px solid $gray-lighter }
-.border-left   { border: 1px solid $gray-lighter }
+.border        { border:        1px solid $gray-lighter }
+.border-top    { border-top:    1px solid $gray-lighter }
+.border-right  { border-right:  1px solid $gray-lighter }
+.border-bottom { border-bottom: 1px solid $gray-lighter }
+.border-left   { border-left:   1px solid $gray-lighter }
 
 .border-0  { border-style: solid; border-width: 0 }
 .border-1  { border-style: solid; border-width: 1px }
